--- a/Android/app/src/main/res/layout/activity_threshold.xml
+++ b/Android/app/src/main/res/layout/activity_threshold.xml
@@ -1,12 +1,36 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.nvbyte.kya.ThresholdActivity">
+    android:orientation="vertical"
+    tools:context="com.nvbyte.kya.ThresholdActivity"
+    android:weightSum="1">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.8">
+    </android.support.v4.view.ViewPager>
 
-</RelativeLayout>
+    <com.viewpagerindicator.UnderlinePageIndicator
+        android:id="@+id/indicator"
+        android:layout_height="4dp"
+        android:layout_width="fill_parent"
+        android:background="#FFCCCCCC"
+        app:selectedColor="#FFCC0000"
+        app:fadeDelay="1000"
+        app:fadeLength="1000"
+        />
+    <TextView
+        android:text="Select threshold"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textColor="#fff"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:background="#4CB6D0"/>
+</LinearLayout>
