Tested all components. Included MainActivity fragments in viewpager

--- a/Android/app/src/main/res/layout/fragment_threshold.xml
+++ b/Android/app/src/main/res/layout/fragment_threshold.xml
@@ -23,7 +23,7 @@
             />
         <TextView
             android:id="@+id/isSelected"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
