--- a/Android/app/src/main/res/layout/activity_threshold.xml
+++ b/Android/app/src/main/res/layout/activity_threshold.xml
@@ -6,7 +6,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.nvbyte.kya.ThresholdActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#fff">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
