--- a/Android/app/src/main/res/xml/preferences.xml
+++ b/Android/app/src/main/res/xml/preferences.xml
@@ -5,14 +5,17 @@
     <CheckBoxPreference
         android:key="mute_preference"
         android:title="Mute"
+        android:defaultValue="false"
         android:summary="Enable or disable all notifications." ></CheckBoxPreference>
     <CheckBoxPreference
         android:key="lower_preference"
         android:title="Negative Delta"
+        android:defaultValue="false"
         android:summary="Notify me when leaving an area of risk."></CheckBoxPreference>
     <CheckBoxPreference
         android:key="vibrate_preference"
         android:title="Vibration"
+        android:defaultValue="true"
         android:summary="Enable or disable vibration."></CheckBoxPreference>
     <Preference
         android:title="Threshold options"
