--- a/Android/app/src/main/res/layout/fragment_base_notification.xml
+++ b/Android/app/src/main/res/layout/fragment_base_notification.xml
@@ -46,11 +46,10 @@
                 android:textSize="13sp"
                 android:textColor="@color/black"/>
             <ImageView
-                android:layout_width="50dp"
-                android:layout_marginLeft="35dp"
-                android:layout_height="fill_parent"
-                android:layout_marginRight="20dp"
-                android:layout_gravity="right"
+                android:layout_width="60dp"
+                android:layout_marginLeft="58dp"
+                android:layout_height="22dp"
+
                 android:src="@drawable/logo"/>
 
             </LinearLayout>
