--- a/Dashboard/public/views/index.html
+++ b/Dashboard/public/views/index.html
@@ -63,6 +63,7 @@
 		<section id="map-section">
 			<div id="loading-img"></div>
 			<div id="googleMap" style="height: 450px"></div>
+			<div id="mapViewer"></div>
 		</section>
 		</div> 
 		
