--- a/Android/app/src/main/res/layout/fragment_statistics.xml
+++ b/Android/app/src/main/res/layout/fragment_statistics.xml
@@ -27,19 +27,12 @@
             android:textSize="50dp"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"/>
-            <TextView
-                android:layout_marginTop="5dp"
-                android:textColor="@color/white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="%"
-                />
         </LinearLayout>
         <TextView
             android:textColor="@color/white"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Crime incidence"
+            android:text="Number of crimes"
             android:layout_gravity="center"
             android:gravity="center"/>
         </LinearLayout>
@@ -50,7 +43,7 @@
         android:layout_below="@id/main_content"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="4/12/2015"
+        android:text="Updated on 4/12/2015"
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="10sp"/>
