--- a/Dashboard/public/css/styles.css
+++ b/Dashboard/public/css/styles.css
@@ -444,14 +444,14 @@ em {
 #loading-img {
 	height: 450px;
 /* 	background: #DDDDD5 url(../images/loading2.gif) no-repeat center center; */
-/* 	background: #DDDDD5 url(../images/loading3.gif) no-repeat center center; */
+	background: #DDDDD5 url(../images/loading3.gif) no-repeat center center;
 
 }
 
 #mapViewer
 {
   position:absolute;
-  width: 200px;
+  width: 240px;
   height: 120px;
   top:2px;  /* adjust value accordingly */
   left: 2px;  /* adjust value accordingly */
