--- a/Dashboard/public/views/index.html
+++ b/Dashboard/public/views/index.html
@@ -52,8 +52,7 @@
 				
 				<div id="kya-story-text">
 					<h1 id="kya-title"><em class="kya-red">K</em>now <em class="kya-orange">Y</em>our<em class="kya-green"> A</em><span id="kya-name-area">rea</span></h1>
-					<p class="center kya-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-					</p>
+					<p class="center kya-text">KYA provides a method to seamlessly notified users of their potential risk when they are on the move, allowing them to consciously make an informed decision as to whether or not they want to expose themselves to it.</p>
 				</div>
 			</div>
 			</div>
