--- a/Dashboard/public/views/aboutus.html
+++ b/Dashboard/public/views/aboutus.html
@@ -37,34 +37,49 @@
 				</header><!-- end header -->
 			</div>
 			
+			<!-- - - - - - - Parallax Section 1 - - - - - - -->
+				<section class="module parallax parallax-about">
+					<div class="container clearfix">
+						
+					</div>
+				</section>
+
+			
 			<div id="body2">
 				<div class="container">
 					<div class="clearfix">
 						<p class="team-name">Christian D. Vázquez</p>
 						<hr>
-						<div class="left-photo-team"></div>
-						<div class="right-description-team"><p class="right-team-text">An experienced full-stack Android developer. He has done research in the area of HCI, and worked with several wearable devices such as Google Glass and Android smartwatches. He’s lead teams in successful collaborations with MIT Lincoln Laboratory, and published work with MIT Media Lab.</p></div>
+						<div class="left-photo-team">
+							<img class="team-image" alt="Christian D. Vázquez" src="images/cvazquez.png">
+						</div>
+						<div class="right-description-team"><p class="team-text">An experienced full-stack Android developer. He has done research in the area of HCI, and worked with several wearable devices such as Google Glass and Android smartwatches. He’s lead teams in successful collaborations with MIT Lincoln Laboratory, and published work with MIT Media Lab.</p></div>
 					</div>
 					
 					<div class="clearfix">
 						<p class="team-name">Luis R. Escobar</p>
 						<hr>
-						<div class="left-photo-team"></div>
-						<div class="right-description-team"><p class="right-team-text">A Project Manager with vast experience in agile development models such as Scrum. He has knowledge in the areas of Database Design, as well as Web Server Implementation. His previous experiences working in Microsoft have earned him a full-time position in the Skype team.</p></div>
+						<p class="team-text"><img class="team-image right-photo-team" alt="Luis R. Escobar" src="images/lescobar.png">A Project Manager with vast experience in agile development models such as Scrum. He has knowledge in the areas of Database Design, as well as Web Server Implementation. His previous experiences working in Microsoft have earned him a full-time position in the Skype team.</p>
+						
 					</div>
+					
+
 					
 					<div class="clearfix">
 						<p class="team-name">Christian O. Montes</p>
 						<hr>
-						<div class="left-photo-team"></div>
-						<div class="right-description-team"><p class="right-team-text">Application Designer for Web environments and Object-Oriented Systems, experienced in programming languages such as HTML5, CSS, Java and Javascript. He has designed a number of high quality prototypes in the past as well, including Android mobile applications for micro- controller management.</p></div>
+						<div class="left-photo-team">
+							<img class="team-image" alt="Christian O. Montes" src="images/cmontes.png">
+						</div>
+						<div class="right-description-team " ><p class="team-text">Application Designer for Web environments and Object-Oriented Systems, experienced in programming languages such as HTML5, CSS, Java and Javascript. He has designed a number of high quality prototypes in the past as well, including Android mobile applications for micro- controller management.</p></div>
 					</div>
 					
 					<div class="clearfix">
 						<p class="team-name">Joel Corporan</p>
 						<hr>
-						<div class="left-photo-team"></div>
-						<div class="right-description-team"><p class="right-team-text">An experienced application developer in the areas of Network Security and Design. His research focuses on applications to identify information leakage in multimedia data transmissions and security performance algorithms, which he has been working on in conjunction with the Communication Assurance for Performance Group at Georgia Tech. He has developed several iOS and Android applications and implemented services for cross-platform web applications.</p></div>
+						
+						<p class="team-text"><img class="team-image right-photo-team" alt="Joel Corporan" src="images/jcorporan.png">An experienced application developer in the areas of Network Security and Design. His research focuses on applications to identify information leakage in multimedia data transmissions and security performance algorithms, which he has been working on in conjunction with the Communication Assurance for Performance Group at Georgia Tech. He has developed several iOS and Android applications and implemented services for cross-platform web applications.</p>
+						
 					</div>
 				</div>
 			</div>
