--- a/Dashboard/public/css/parallax.css
+++ b/Dashboard/public/css/parallax.css
@@ -65,6 +65,10 @@ section.module.parallax-3 {
   background-image: url("../images/5.png");
 }
 
+section.module.parallax-about {
+  background-image: url("../images/kya-team.jpg");
+}
+
 @media all and (min-width: 600px) {
   section.module h2 {
     font-size: 42px;
