Adding mocking interface. Fixing null current location. New speed tracking.

--- a/Android/companionapp/src/main/res/layout/activity_main.xml
+++ b/Android/companionapp/src/main/res/layout/activity_main.xml
@@ -3,16 +3,27 @@
     android:layout_height="match_parent"
     tools:context="com.nvbyte.companionapp.MainActivity">
 
-    <TextView
-        android:id="@+id/message"
-        android:gravity="center" android:layout_centerInParent="true" android:text="Messages" android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/latitude"
+        android:layout_width="100dp"
+        android:hint="Latitude"
         android:layout_height="wrap_content"
-        android:textSize="34dp"/>
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/http"
+        android:layout_marginTop="54dp" />
+    <EditText
+        android:id="@+id/longitude"
+        android:layout_width="100dp"
+        android:hint="Longitude"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/latitude"
+        android:layout_alignStart="@+id/latitude" />
     <Button
         android:id="@+id/http"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="HTTP"/>
+        android:layout_centerInParent="true"
+        android:text="Send Mcok"/>
 
 </RelativeLayout>
