--- a/Dashboard/public/css/styles.css
+++ b/Dashboard/public/css/styles.css
@@ -1,18 +1,8 @@
-/* ===============================
-   Authors: 
-   Date:
-   
-   Colour Palette:
-   ---------------
-   
-   =============================== */
-
 /************************************************************************
  *								GENERAL									*
  ************************************************************************/
 body {
 
-/* 	background: #ffffff url('../images/paper-bg.jpg') top center repeat; */
 	background: #ffffff;
 	color: #4b2707;
 	font-size: 14px;
@@ -162,7 +152,6 @@ hr.divider {
 
 }
 
-
 /************************************************************************
  *								HEADER									*
  ************************************************************************/
@@ -183,7 +172,7 @@ hr.divider {
 }
 
 header.main.header {
-	background: rgba(75,    157,    186, 0.99);
+	background: rgba(75, 157,186, 0.99);
 	color: #f2f3ee;
 	padding: 0;
 	box-shadow: 0 1px 3px rgba(0,0,0,.5);
@@ -204,7 +193,7 @@ li img {
 
 a.link-logo {
 	padding: 0;
-	margin-left: -20px;
+	margin-left: -30px;
 	margin-top: 5px;
 	margin-bottom: 0;
 	position: absolute
@@ -226,9 +215,8 @@ nav ul li:hover > ul {
 }
 	
 nav ul {
-/* 	background: url('../images/subtle-dots.png') top left repeat; */
 	margin: 0px;
-	padding: 0 20px;
+	/*padding: 0 20px;*/
 	list-style: none;
 	position: relative;
 	display: inline-table;
@@ -256,9 +244,7 @@ nav ul li.header-first {
 }
 
 nav ul li:hover {
-/* 	background-color: rgba(248,  180,  62, 0.31); */
 	border-color: #1A3971;
-
 }
 
 nav ul li:hover a {
@@ -297,26 +283,32 @@ nav ul ul {
 }
 
 nav ul ul li {
-	background-color: rgba(248,  180,  62, 0.31);
+	background-color: rgba(75, 157,186, 0.99);
 	float: none; 
-	border-bottom: 1px solid #8D473D;
+	border-bottom: 1px solid #316191;
 	position: relative;
 	
 }
 
 nav ul ul li:first-child {
-	border-top: 1px solid #8D473D;
+	border-top: 1px solid #316191;
 
 }
 
-nav ul ul li a {
-	padding: 15px 40px;
-	color: #fff;
-}	
+nav ul ul li {
+	display: block; 
+	padding: 15px 20px;
+	color: #FFF; 
+	text-decoration: none;
+	font-size: 12px;
+	text-transform: uppercase;
+	text-rendering: optimizeLegibility;
+}
 	
-nav ul ul li a:hover {
-	background: rgba(236, 142, 60, 0.85);
+nav ul ul li:hover {
+	background: #316191;
 	color: #FFF;
+	cursor: pointer;
 }
 			
 nav ul ul ul {
@@ -326,11 +318,15 @@ nav ul ul ul {
 }
 
 li.header-title.active {
-	border-color: #1A3971;
+	border-color: #316191;
 }
 
 li.header-title.active a{
 	color: #1A3971;
+}
+
+.active{
+	background-color: #316191;
 }
 
 /************************************************************************
@@ -406,7 +402,6 @@ ul.sub-header a:hover {
 #description {
 	background-color: #E4E3DD;
 	box-shadow: 0 1px 3px rgba(0,0,0,.5);
-/* 	box-shadow: 0 1px 0 #E4E3DD; */
 	border-top: 1px solid #E4E3DD;
 	border-bottom: 1px solid #E4E3DD;
 }
@@ -514,7 +509,12 @@ div div.legend-hover:hover {
 	position: relative;
 	z-index: 5;
 	font-weight: 600;
+	cursor: pointer;
 
+}
+
+#level1 {
+	cursor: not-allowed;
 }
 
 .legend {
@@ -703,6 +703,11 @@ div div.legend-hover:hover {
 #crime-rate {
 	font-weight: 600;
 	color: #61B535;
+}
+
+#threshold-bounds {
+	font-weight: 600;
+	color: #316191;
 }
 
 
