Fixed dragging issues, Chicago zones added and multiple users now supported

--- a/Dashboard/public/views/index.html
+++ b/Dashboard/public/views/index.html
@@ -40,11 +40,12 @@
 								<li><a class="link-logo " href="/"><img alt="KYA logo" src="images/kya-logo2.png"></a></li>
 								<li class="header-title header-first"><a href="#map-section">Map <span>&#9662;</span></a>
 									<ul>
-										<li id="prMap" onclick="showNewMap(0)">Puerto Rico</li>
+										<li id="prMap" class="active" onclick="showNewMap(0)">Puerto Rico</li>
 										<li id="bostonMap" onclick="showNewMap(1)">Boston</li>
 										<li id="atlMap" onclick="showNewMap(2)">Atlanta</li>
 										<li id="sfMap" onclick="showNewMap(3)">San Francisco</li>
 										<li id="laMap" onclick="showNewMap(4)">Los Angeles</li>
+										<li id="chicagoMap" onclick="showNewMap(5)">Chicago</li>
 									</ul>
 								</li>
 								<li class="header-title "><a href="#stats-section">Statistics</a></li>
