Google Chrome Fix

--- a/Dashboard/public/views/index.html
+++ b/Dashboard/public/views/index.html
@@ -38,7 +38,7 @@
 						<nav>
 							<ul >
 								<li><a class="link-logo " href="/"><img alt="KYA logo" src="images/kya-logo2.png"></a></li>
-								<li class="header-title header-first"><a href="#map-section">Map <span>&#9662;</span></a>
+								<li class="header-title header-first"><a href="#map-section">Map&#9662;</a>
 									<ul>
 										<li id="prMap" class="active" onclick="showNewMap(0)">Puerto Rico</li>
 										<li id="bostonMap" onclick="showNewMap(1)">Boston</li>
